# simple_http_server

./: .gitignore  Cargo.toml  DOC.md  README.md  REPORT.md  report.md  test_results.txt
certificates/: cert.der  cert.pem  decrypted_key.der  decrypted_key.pem  key.pem
src/: http.rs  http1_1.rs  http2.rs  main.rs  tls.rs
src/http2/: connection.rs  error.rs  frames.rs  server.rs  settings.rs  stream.rs  window.rs
static/: 404.html  index.html
static/css/: index.css
static/js/: index.js  multiplexing.js
tests/: pipelining.rs  test.rs
