[package]
name = "simple_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
hpack = "0.3.0"
num_enum = "0.7.1"
rustls = "0.22.0"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
[dependencies.bitflags]
version = "2.4.1"
